--- a/valentineDay24.css
+++ b/valentineDay24.css
@@ -1,1 +1,16 @@
-
+div {
+  width: 95%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+}
+.intro{
+  background-color
+}
+.para1{}
+.para2{}
+.para3{}
+.para4{}
+.para5{}
+.para6{}
+.note{}
+.chal{}
