--- a/valentineDay24.css
+++ b/valentineDay24.css
@@ -9,25 +9,25 @@ div {
   background-color: #E0FFC2;
 }
 .para1{
-  background-color: #E2AFFF;
+  background-color: #ffccff;
 }
 .para2{
   background-color: #E0FFC2;
 }
 .para3{
-  background-color: #E2AFFF;
+  background-color: #ffccff;
 }
 .para4{
   background-color: #E0FFC2;
 }
 .para5{
-  background-color: #E2AFFF;
+  background-color: #ffccff;
 }
 .para6{
   background-color: #E0FFC2;
 }
 .note{
-  background-color: #E2AFFF;
+  background-color: #ffccff;
 }
 .chal{
   background-color: #FEC6AE;
